@@ -271,29 +271,14 @@ namespace Chummer
                 lblRatingNALabel.Visible = false;
             }
 
-            string strAvail = string.Empty;
-            string strAvailExpr = objXmlMod.SelectSingleNode("avail")?.Value ?? string.Empty;
-            if (strAvailExpr.Length > 0)
-            {
-                char chrLastAvailChar = strAvailExpr[strAvailExpr.Length - 1];
-                if (chrLastAvailChar == 'F')
-                {
-                    strAvail = LanguageManager.GetString("String_AvailForbidden", GlobalOptions.Language);
-                    strAvailExpr = strAvailExpr.Substring(0, strAvailExpr.Length - 1);
-                }
-                else if (chrLastAvailChar == 'R')
-                {
-                    strAvail = LanguageManager.GetString("String_AvailRestricted", GlobalOptions.Language);
-                    strAvailExpr = strAvailExpr.Substring(0, strAvailExpr.Length - 1);
-                }
-            }
-
-            object objProcess = CommonFunctions.EvaluateInvariantXPath(strAvailExpr.Replace("Rating", nudRating.Value.ToString(GlobalOptions.InvariantCultureInfo)), out bool blnIsSuccess);
-            lblAvail.Text = (blnIsSuccess ? Convert.ToInt32(objProcess).ToString() : strAvailExpr) + strAvail;
+            
+            lblAvail.Text = new AvailabilityValue(Convert.ToInt32(nudRating.Value), objXmlMod.SelectSingleNode("avail")?.Value).ToString();
             lblAvailLabel.Visible = !string.IsNullOrEmpty(lblAvail.Text);
 
             // Cost.
             chkBlackMarketDiscount.Checked = _setBlackMarketMaps.Contains(objXmlMod.SelectSingleNode("category")?.Value);
+            object objProcess;
+            bool blnIsSuccess;
             if (chkFreeItem.Checked)
             {
                 lblCost.Text = (0.0m).ToString(_objCharacter.Options.NuyenFormat, GlobalOptions.CultureInfo) + '¥';
